# Noa-s-repo

./: .gitignore  CMakeLists.txt  CMakePresets.json  config.ini  new 1.txt  rtk_dep.txt
rtk/: ephemeris.c  rcvraw.c
src/: MiniUBX.cpp  MiniUBX.hpp  UBX_parser.cpp  UBX_parser.hpp  UbxProtocol.cpp  brdc2160.25n  ceserial.h  main.c  main_config.c  main_serial.cpp  main_serial_noa.cpp  main_serial_rawx_sfrbx_diagnostic.cpp  rtk_gnss_config.c  rtk_gnss_config.h  serial_main_updated.cpp  solver_simp.cpp  solver_simp.hpp  updated_UBX_parser.cpp  updated_UBX_parser.hpp
